<resources>
    <string name="app_name">Pet Happy</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="logo">Logo</string>
    <string name="login_btn">LOGIN</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="no_acc_yet">No account yet? Create one</string>
    <string name="detailsTextView">detailsTextView</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--RegisterActivity-->
    <string name="register_activity_email">Email</string>
    <string name="register_activity_first_name">First Name</string>
    <string name="register_activity_last_name">Last Name</string>
    <string name="register_activity_mobile_phone_number">Mobile Phone #</string>
    <string name="register_activity_address">Address</string>
    <string name="register_activity_unity_number">Unit#</string>
    <string name="register_activity_postal_code">Postal Code</string>
    <string name="register_activity_city">City</string>
    <string name="register_activity_province_territory">Province/Terr.</string>
    <string name="register_activity_buzzer">Buzzer</string>
    <string name="register_activity_password">Password</string>
    <string name="register_activity_repeat_password">Repeat Password</string>
    <string name="activity_register_menu_save">Save</string>
    <string name="nav_home">Home</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_pref">Prefrences</string>
    <string name="nav_preferences">Preferences</string>

    <!--Main Activity-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">NewMainActivity</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Cart</string>
    <string name="title_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="detailstextview">detailsTextView</string>
    <string name="tips_badge_removed" translatable="false">Badge is removed</string>
    <string name="title_activity_product_details2">ProductDetails2Activity</string>

    <string-array name="delivery_every_months_array">
        <item>1 month (most common)</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>4 months</item>
        <item>5 months</item>
        <item>6 months</item>
    </string-array>

    <string-array name="delivery_preferred_day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <!--Search-->
    <string name="search_hint">Search products</string>
</resources>
