<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_pets_black_24dp"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_update_black_24dp"
        android:title="@string/title_subscriptions" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />
</menu>
